--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "numpy>=1.24.4",
     "python-lzf>=0.2.4",
+    "pydantic>=2.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8.2"
@@ -33,6 +34,7 @@ dev-dependencies = [
     "setuptools-scm>=7.1.0",
     "isort>=5.12.0",
     "pyproject-flake8>=6.0.0.post1",
+    "pre-commit>=3.4.0",
 ]
 
 [tool.rye.scripts]
