--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=1.24.4",
     "python-lzf>=0.2.4",
     "pydantic>=2.3.0",
+    "typing_extensions>=4.7.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8.2"
