--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dev-dependencies = [
     "pre-commit>=3.4.0",
     "pytest>=7.4.1",
     "tox>=4.11.1",
+    "pytest-cov>=4.1.0",
 ]
 
 [tool.rye.scripts]
