Update TestPyPI publish command in GitHub Actions workflow
- Simplified the publish command by removing unnecessary line breaks and indentation, while preserving the original functionality.
- Ensured consistent formatting for the `run` command to maintain readability and clarity.

Signed-off-by: urasakikeisuke <keisuke.urasaki@map4.jp>

--- a/.github/workflows/deploy-testpypi.yaml
+++ b/.github/workflows/deploy-testpypi.yaml
@@ -29,10 +29,4 @@ jobs:
         run: rye build --clean
 
       - name: Publish to TestPyPI
-        run: >
-          rye publish
-            --yes
-            --verbose
-            --repository testpypi
-            --repository-url https://test.pypi.org/legacy/
-            --token ${{ secrets.TEST_PYPI_TOKEN }}
+        run: rye publish --yes --verbose --repository testpypi --repository-url https://test.pypi.org/legacy/ --token ${{ secrets.TEST_PYPI_TOKEN }}
