WIP: Update GitHub Actions workflow and project configuration for PyPI deployment
Signed-off-by: urasakikeisuke <keisuke.urasaki@map4.jp>

--- a/.github/workflows/deploy-pypi.yaml
+++ b/.github/workflows/deploy-pypi.yaml
@@ -4,13 +4,13 @@ on:
   release:
     types: [published]
 
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,5 +29,5 @@ jobs:
       - name: Build distribution packages
         run: rye build --clean
 
-      - name: Publish to PyPI
-        run: rye publish --yes --verbose --token ${{ secrets.PYPI_TOKEN }}
+      # - name: Publish to PyPI
+      #   run: rye publish --yes --verbose --token ${{ secrets.PYPI_TOKEN }}
