Relax upper constraint on Pydantic version
Change constraint from `<=2.6.4` to `<3.0.0`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "urasakikeisuke", email = "keisuke.urasaki@map4.jp" }]
 dependencies = [
     "numpy>=1.21.0",
     "python-lzf>=0.2.4",
-    "pydantic >=1.10.8, <=2.6.4",
+    "pydantic >=1.10.8, <3.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8.2"
