--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ authors = [{ name = "urasakikeisuke", email = "keisuke.urasaki@map4.jp" }]
 dependencies = [
     "numpy>=1.21.0",
     "pydantic >=1.10.8, <3.0.0",
-    "python-neo-lzf>=0.3.0",
+    # python-neo-lzf lacks pre-built wheels for aarch64 (Arm64).
+    # To enable installation on Arm platforms without requiring compilation tools,
+    # we switch to python-lzf for aarch64/arm64 environments.
+    "python-neo-lzf>=0.3.0; platform_machine != 'aarch64' and platform_machine != 'arm64'",
+    "python-lzf; platform_machine == 'aarch64' or platform_machine == 'arm64'",
 ]
 readme = "README.md"
 requires-python = ">= 3.8.2"
